--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -227,7 +227,7 @@ body {
           @extend %head-three;
         }
       }
-      .buy-button {
+      .buy.normal {
         @extend %button-normal;
         @extend %head-six;
         &:hover {
@@ -301,4 +301,10 @@ body {
     display: flex;
     align-items: center;
   }
+}
+.buy.loading {
+  @extend %button-disabled
+}
+.buy.done {
+  @extend %button-done
 }
